Agregando registro mediante firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
           <button routerLink="busqueda/{{ busqueda }}" class="btn btn-outline-light" type="submit">Search</button>
         </form>
         <div>
-          <button class="btn btn-outline-info me-2 me-md-0 ms-lg-2 mt-2 mt-lg-0" routerLink="registro">Registrarse</button>
+          <button class="btn btn-outline-info me-2 me-md-0 ms-lg-2 mt-2 mt-lg-0" routerLink="registro">Registrarse / Iniciar sesión</button>
         </div>
       </div>
     </div>
