modificando registro html

--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -108,7 +108,7 @@
                 La contraseña es requerida
               </span>
               <span *ngIf="passwd?.errors?.['minlength']">
-                La contraseña debe de tener minimo cinco caracteres
+                La contraseña debe de tener minimo seis caracteres
               </span>
             </div>
           </div>
