--- a/src/app/components/skins/skins.component.html
+++ b/src/app/components/skins/skins.component.html
@@ -1,7 +1,19 @@
 
-<div class="body">
-  <div class="mb-4">
-    <h1 class="text-center mb-4"> Un poco de nuestros usuarios </h1>
+<div id="slideout" class="ngbDropdown">
+  <button class="btn btn-secondary" ngbDropdownToggle>tamaño de letra</button>
+  <ul class="" id="menu" ngbDropdownMenu>
+    <li ><button class="btn btn-outline-dark b-1" (click)="increase()">Letra grande</button></li>
+    <li ><button class="btn btn-outline-dark b-1" (click)="decrease()">Letra pequeña</button></li>
+    <li ><button class="btn btn-outline-dark b-1" (click)="reset()">Letra regular</button></li>
+    <li ><button class="btn btn-outline-dark b-1" (click)="highContrast()" >Alto contraste</button></li>
+    <li ><button class="btn btn-outline-dark b-2" (click)="normalContrast()" >Contraste regular</button></li>
+      
+  </ul>
+</div>
+
+<div class="body" [style.fontSize.px]="fontSize">
+  <div  [className]="ContrastInfo">
+    <h1 class="text-center mb-4"  [style.fontSize.px]="fontSize*2.5"> Un poco de nuestros usuarios </h1>
     <p>En airbnv no solo nos gusta entregarles un contenido de calidad a nuestros
       clientes y futuros clientes, si no también el mostrar por medio de ellos
       sus experiencias rentando nuestras casas.
@@ -11,10 +23,10 @@
       rentando nuestras casas.
     </p>
   </div>
-  <table class="table table-striped table-hover">
+  <table [className]="clasesContrast" tabindex="1" aria-label="contenido">
     <thead>
       <tr>
-        <th scope="col"> Skin </th>
+        <th scope="col" aria-label="skin" > Skin </th>
         <th scope="col"> Nombre usuario </th>
         <th scope="col"> Año ingreso</th>
       </tr>
