--- a/src/app/components/casa/casa.component.html
+++ b/src/app/components/casa/casa.component.html
@@ -21,7 +21,7 @@
         </button>
       </div>
     </div>
-    
+
     <div class="col-12 col-lg-6 contenidoCentrar">
       <h5 class="card-title">{{ casa.nombre }}</h5>
       <hr>
@@ -99,11 +99,11 @@
           <div class="my-3">
             <div  *ngIf="verificarUsr(); else NoUsr" >
               <button type="submit" class="btn btn-outline-dark">
-              Hacer cotización
+                Reservar
               </button>
             </div>
             <ng-template #NoUsr>
-              <button type="submit" class="btn btn-outline-dark" disabled>
+              <button type="submit" class="btn btn-outline-dark" routerLink="/registro">
                 Inicia sesión para continuar
                 </button>
             </ng-template>
