--- a/src/app/components/conocenos/conocenos.component.html
+++ b/src/app/components/conocenos/conocenos.component.html
@@ -16,7 +16,7 @@
       <div class="card mb-3" @fade>
         <div class="imgs my-2">
           <img
-          src="../../../assets/Img/img1.jpg"
+          src="assets/Img/img1.jpg"
           class="img-fluid rounded"
           alt="..."
           />
@@ -28,7 +28,7 @@
             matemáticas y dar asesorías a mis compañeros
           </p>
           <a href="//instagram.com/gefemadel?igshid=NTc4MTIwNjQ2YQ=="
-            ><img src="../../../assets/Img/instagram.png" width="10%"
+            ><img src="assets/Img/instagram.png" width="10%"
           /></a>
         </div>
       </div>
@@ -37,7 +37,7 @@
       <div class="card mb-3" @fade>
           <div class="imgs my-2">
             <img
-              src="../../../assets/Img/img2.jpeg"
+              src="assets/Img/img2.jpeg"
               class="img-fluid rounded"
               alt="..."
             />
@@ -52,7 +52,7 @@
               </p>
               <a
                 href="https://instagram.com/mannymunoz_?igshid=NTc4MTIwNjQ2YQ=="
-                ><img src="../../../assets/Img/instagram.png" width="10%"
+                ><img src="assets/Img/instagram.png" width="10%"
               /></a>
             </div>
         </div>
@@ -61,7 +61,7 @@
       <div class="card mb-3" @fade>
           <div class="imgs my-2">
             <img
-              src="../../../assets/Img/img4.jpg"
+              src="assets/Img/img4.jpg"
               class="img-fluid rounded"
               alt="..."
             />
@@ -75,7 +75,7 @@
               </p>
               <a
                 href="https://instagram.com/sandyolimpia02?igshid=ZGUzMzM3NWJiOQ=="
-                ><img src="../../../assets/Img/instagram.png" width="10%"
+                ><img src="assets/Img/instagram.png" width="10%"
               /></a>
             </div>
       </div>
@@ -84,7 +84,7 @@
       <div class="card mb-3" @fade>
           <div class="imgs my-2">
             <img
-              src="../../../assets/Img/img3.gif"
+              src="assets/Img/img3.gif"
               class="img-fluid rounded"
               alt="..."
             />
@@ -96,7 +96,7 @@
                 pasatiempos favoritos. Me gusta mucho dormir
               </p>
               <a href=" https://www.instagram.com/franciscomendez324/"
-                ><img src="../../../assets/Img/instagram.png" width="10%"
+                ><img src="assets/Img/instagram.png" width="10%"
               /></a>
             </div>
       </div>
@@ -112,7 +112,7 @@
       fantasticas casas.
     </p>
     <div class="contenedor justify-content-center">
-      <img class="logo" src="../../../assets/Img/777.png" />
+      <img class="logo" src="assets/Img/777.png" />
       <div class="overlay">
         <div class="text text-center">
           "Si lo puedes imaginar, lo puedes construir"  <br>
