--- a/src/app/components/busqueda/busqueda.component.html
+++ b/src/app/components/busqueda/busqueda.component.html
@@ -8,7 +8,7 @@
                           <label class="text-center" for="ciudades"><strong >Ubicacion</strong></label>
                           <hr>
                           <div class="text-center mb-2">
-                              <p-dropdown [options]="ciudades" [showClear]="true" placeholder="Selecciona un bioma" [(ngModel)]="ciudadSeleccionada" optionLabel="name" (onClick)="filtrarResultados()"></p-dropdown>
+                              <p-dropdown [options]="ciudades" [showClear]="true" placeholder="Selecciona un bioma" [(ngModel)]="ciudadSeleccionada" optionLabel="name" (onClear)="filtrarResultados()" (onClick)="filtrarResultados()"></p-dropdown>
                           </div>
                       </div>
                       <div class="card flex justify-content-center mt-2">
