--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
             <a class="nav-link" routerLinkActive="active" aria-current="page" routerLink="home">AirbnV</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="catalogo">Catálogo</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="reservaciones">Reservaciones</a>
           </li>
           <li class="nav-item">
