--- a/src/app/components/reservaciones/reservaciones.component.html
+++ b/src/app/components/reservaciones/reservaciones.component.html
@@ -1,34 +1,38 @@
 <div class="body">
-<div class="container tabla" *ngIf="verififcarDatos(); else error">
+<div class="container tabla" *ngIf="verificarDatos(); else error">
     <div class="row">
         <div class="col text-center">
             <h3>Reservaciones</h3>
         </div>
     </div>
     <br>
-    <table class="table table-dark table-striped text-center">
-        <thead>
-            <tr>
-                <th>Casa reservada</th>
-                <th>Usuario</th>
-                <th>Personas</th>
-                <th>Fecha Inicio</th>
-                <th>Fecha Final</th>
-                <th>Total</th>
-           </tr>
-        </thead>
-        <tbody>
-            <tr class="table-secondary " *ngFor="let info of informacion">
-                <td>{{info.id}}</td>
-                <td>{{info.usr}}</td>
-                <td>{{info.personas}}</td>
-                <td>{{info.fechaInicio}} {{info.horaInicio}}</td>
-                <td>{{info.fechaFinal}} {{info.horaFinal}}</td>
-                <td>{{info.precio}}</td>
-            </tr>
-        </tbody>
-        
-    </table>
+    <div class="table-responsive">
+        <table class="table table-dark table-striped text-center">
+            <thead>
+                <tr>
+                    <th>Casa reservada</th>
+                    <th>Usuario</th>
+                    <th>Personas</th>
+                    <th>Fecha Inicio</th>
+                    <th>Fecha Final</th>
+                    <th>Total</th>
+               </tr>
+            </thead>
+            <tbody>
+                <ng-container *ngFor="let casa of data">
+                    <tr class="table-secondary " *ngFor="let info of casa">
+                        <td><img src="assets/casas/casa{{info.idCasa}}/casa{{info.idCasa}}.jpg" class="img-fluid rounded" style="max-height: 200px;" alt="Casa{{info.idCasa}}"></td>
+                        <td>{{info.infoUsuario.nombre}}</td>
+                        <td>{{info.cantPersonas}}</td>
+                        <td>{{info.fechaInicioFormato}}</td>
+                        <td>{{info.fechaFinalFormato}}</td>
+                        <td>${{info.precioFormato}}</td>
+                    </tr>
+                </ng-container>
+            </tbody>
+        </table>
+    </div>
+    
 </div>
 <ng-template #error>
 <div class="container text-center">
