--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <div  class="row card mb-4 p-3" @fade>
+    <div  class="row card mb-4 p-3" >
         <h2>"Si lo puedes imaginar, lo puedes construir" </h2>
     </div>
-    <div class="row card mb-4 p-3" @fade>
+    <div class="row card mb-4 p-3" >
 
         <h2 class="my-2">Acerca de nuestra pagina</h2>
         <p>
@@ -24,11 +24,11 @@
           </div>
         </div>
       </div>
-      <div class="row mb-4 card p-3 justify-content-center" @fade>
+      <div class="row mb-4 card p-3 justify-content-center" >
         <h2>Algunas de nuestras casas</h2>
         <app-cards [casas]="mostrar"></app-cards>
       </div>
-      <div class="row mb-4 card p-3" @fade>
+      <div class="row mb-4 card p-3" >
         <h2>Acerca del creador de las casas:</h2>
         <p>
           Samuel de Luque Batuecas (Madrid, España; 12 de abril de 1989), más conocido
