--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
             <a class="nav-link" routerLinkActive="active" routerLink="skins">Usuarios</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="inversiones">Inversionistas</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="dudas">Dudas</a>
           </li>
           <li class="nav-item">
