--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -13,7 +13,7 @@
           fantasticas casas.
         </p>
         <div class="contenedor justify-content-center" >
-          <img class="logo" src="../../../assets/Img/777.png" />
+          <img class="logo" src="assets/Img/777.png" />
           <div class="overlay">
             <div class="text text-center">
               El logo de nuestra empresa representa la imagen que deseamos generar a
@@ -131,6 +131,6 @@
           </div>
         </div>
       </div>
-    
-    
+
+
 </div>
