arreglado el espaciado

--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -1,3 +1,4 @@
+
 .body {
     min-height: 85vh;
 }
@@ -76,3 +77,5 @@ img .triple7, .logo{
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.17);
 }
+
+/*para el titulo*/
