--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,5 +1,5 @@
-<div class="row my-4 text-center">
-    <div *ngFor="let casa of casas" @fade class=" mx-xxl-1 col-xxl-2 col-xl-3 col-lg-4 col-md-6 my-1">
+<div class="row my-4 text-center centro">
+    <div *ngFor="let casa of casas" @fade class="centro mx-xxl-1 col-xxl-2 col-xl-3 col-lg-4 col-md-5 my-1">
         <a  routerLink="/casa/{{ casa.nombre }}" >
             <div class="card" style="overflow: hidden;">
                 <img src="../../../assets/casas/{{casa.carpetaImg}}/{{casa.rutaImg[0]}}" class="card-img-top mb-1 rounded-top" alt="...">
