--- a/src/app/components/conocenos/conocenos.component.html
+++ b/src/app/components/conocenos/conocenos.component.html
@@ -125,7 +125,7 @@
       <div class="card mb-3" @fade>
           <div class="imgs my-2">
             <img
-              src="assets/Img/img3.gif"
+              src="assets/Img/img5.jpg"
               class="img-fluid rounded"
               alt="..."
             />
@@ -133,7 +133,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Javier Guerrero Carrera</h5>
               <p class="card-text">
-                Inserte descripción mamalonsisima aquí x2
+                tengo 21 años, me gusta mucho tocar música de rock en mi batería y ver transmisiones en vivo. Ahorita dedico mucho tiempo a cuidar a mi abuela.
               </p>
               <a href=" https://www.instagram.com/franciscomendez324/"
                 ><img src="assets/Img/instagram.png" width="10%"
