--- a/src/app/components/inversiones/inversiones.component.html
+++ b/src/app/components/inversiones/inversiones.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<div class="container body">
+    <div class="row mb-3">
+      <div class="col text-center">
+          <h3>Inversionistas</h3>
+      </div>
+    </div>
     <div class="row">
         <div class="col">
         <div class="card-columns">
@@ -18,4 +23,3 @@
         </div>
     </div>
 </div>
-  
