--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -28,7 +28,7 @@
           </div>
         </div>
 
-        <div id="inicio" [ngClass]="(sesion.invalid || !(checkPsswd())) ? 'deshabilitado':'habilitado'" class="button">
+        <div id="inicio" [ngClass]="sesion.invalid ? 'deshabilitado':'habilitado'" class="button">
           <button id="inputIniciar" type="submit">Iniciar Sesión</button>
         </div>
       </form>
