--- a/src/app/components/principal/principal.component.css
+++ b/src/app/components/principal/principal.component.css
@@ -20,7 +20,7 @@ img .triple7, .logo{
 }
 
 .V777{
-  width: 100%;  
+  width: 100%;
 }
 .imgs{
   width: 50%;
@@ -33,13 +33,13 @@ img .triple7, .logo{
     width: 50%;
     margin: 0 auto;
 }
-  
+
 .logo {
   display: block;
   width: 100%;
   height: auto;
 }
-  
+
 .overlay {
   position: absolute;
   top: 0;
@@ -52,11 +52,11 @@ img .triple7, .logo{
   transition: .5s ease;
   background-color: #570a66;
 }
-  
+
 .contenedor:hover .overlay {
   opacity: 1;
 }
-  
+
 .text {
   color: white;
   font-size: 20px;
@@ -79,3 +79,18 @@ img .triple7, .logo{
 }
 
 /*para el titulo*/
+.bg-1{
+  padding-top: 150px;
+}
+
+.t-stroke {
+ color: transparent;
+ -moz-text-stroke-width: 1px;
+ -webkit-text-stroke-width: 1px;
+ -moz-text-stroke-color: #000000;
+ -webkit-text-stroke-color: #ffffff;
+}
+
+.t-shadow {
+ text-shadow: 4px 4px #2f203e;
+}
