Finalizando detalles para firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,12 +30,12 @@
             <a class="nav-link" routerLinkActive="active" routerLink="conocenos">Conocenos</a>
           </li>
         </ul>
-        <form class="d-flex my-1 mt-lg-0" role="search">
+        <form class="d-flex my-1 my-lg-0 mt-lg-0" role="search">
           <input class="form-control" id="termino" type="search" placeholder="Busqueda" aria-label="Search">
-          <button routerLink="busqueda/{{busqueda}}" class="btn btn-outline-light" type="submit">Buscar</button>
+          <button routerLink="busqueda/{{busqueda}}" class="btn btn-outline-light ms-1" type="submit">Buscar</button>
         </form>
         <div class="btn-group">
-          <button id="inicioSesion" type="button" class="btn btn-outline-info ms-lg-2 mt-2 mt-lg-0" routerLink="registro">
+          <button id="inicioSesion" type="button" class="btn btn-outline-info ms-lg-3 mt-2 mt-lg-0" routerLink="registro">
             <i class="fa-solid fa-user"></i> Iniciar Sesión/Registrarse
           </button>
           <button type="button" class="btn btn-outline-info dropdown-toggle dropdown-toggle-split me-2 me-md-0 mt-2 mt-lg-0" data-bs-toggle="dropdown" aria-expanded="false">
