--- a/src/app/components/conocenos/conocenos.component.html
+++ b/src/app/components/conocenos/conocenos.component.html
@@ -105,15 +105,15 @@
       <div class="card mb-3" @fade>
           <div class="imgs my-2">
             <img
-              src="assets/Img/img3.gif"
+              src="assets/Img/img6.jpeg"
               class="img-fluid rounded"
               alt="..."
             />
           </div>
             <div class="card-body text-center">
-              <h5 class="card-title">Fátima del Rocío Martínez Dávila</h5>
+              <h5 class="card-title">Fatima del Rocío Martínez Dávila</h5>
               <p class="card-text">
-                Inserte descripción mamalonsisima aquí
+                Viviendo una tragicomedia desde el 2002, team Edward, tengo un perrito schnauzer y sinceramente creo que no era necesario sacar "Toy Story 4". Cuiden el planeta, mi perrito tiene mucho calor :))
               </p>
               <a href=" https://www.instagram.com/franciscomendez324/"
                 ><img src="assets/Img/instagram.png" width="10%"
