--- a/src/app/components/reservaciones/reservaciones.component.html
+++ b/src/app/components/reservaciones/reservaciones.component.html
@@ -7,6 +7,9 @@
   <ng-container *ngIf="auth.currentUser; else NoUsr">
     <div class="" *ngIf="verificarDatos(); else error">
       <br>
+      <div *ngIf="currentUserAdmin()">
+        <h4 class="text-center">Administración</h4>
+      </div>
       <div class="table-responsive">
           <table class="table table-dark table-striped text-center">
               <thead>
@@ -23,19 +26,25 @@
               <tbody>
                   <ng-container *ngFor="let casa of data">
                     <ng-container *ngFor="let info of casa">
-                      <tr class="table-secondary " *ngIf="info.uid==auth.currentUser?.uid">
+                      <tr class="table-secondary " *ngIf="info.uid==auth.currentUser?.uid || currentUserAdmin()">
                         <td><img src="assets/casas/casa{{info.idCasa}}/casa{{info.idCasa}}.jpg" class="img-fluid rounded" style="max-height: 200px;" alt="Casa{{info.idCasa}}"></td>
                         <td>{{info.infoUsuario.nombre}}</td>
                         <td>{{info.cantPersonas}}</td>
                         <td>{{info.fechaInicioFormato}}</td>
                         <td>{{info.fechaFinalFormato}}</td>
                         <td>${{info.precioFormato}}</td>
-                        <ng-container *ngIf="fechaMayor(info.fechaInicio); else eliminar">
-                          <td><i class="fa-solid fa-circle-info fa-2xl" style="cursor:pointer" (click)="fechaMayorInfo()"></i></td>
+                        <ng-container *ngIf="info.uid==auth.currentUser.uid; else otroUsuario">
+                          <ng-container *ngIf="fechaMayor(info.fechaInicio); else eliminar">
+                            <td><i class="fa-solid fa-circle-info fa-2xl" style="cursor:pointer" (click)="fechaMayorInfo()"></i></td>
+                          </ng-container>
+                          <ng-template #eliminar>
+                            <td><i class="fa-solid fa-rectangle-xmark fa-2xl" style="cursor:pointer;" (click)="eliminarReservacion(info.idCasa, info.idDocumento)"></i></td>
+                          </ng-template>
                         </ng-container>
-                        <ng-template #eliminar>
-                          <td><i class="fa-solid fa-rectangle-xmark fa-2xl" style="cursor:pointer;" (click)="eliminarReservacion(info.idCasa, info.idDocumento)"></i></td>
+                        <ng-template #otroUsuario>
+                          <td><i class="fa-solid fa-circle-info fa-2xl" style="cursor:pointer" (click)="otroUsuarioInfo(info.infoUsuario)"></i></td>
                         </ng-template>
+
                       </tr>
                     </ng-container>
                   </ng-container>
