--- a/src/app/components/conocenos/conocenos.component.html
+++ b/src/app/components/conocenos/conocenos.component.html
@@ -24,8 +24,9 @@
         <div class="card-body text-center">
           <h5 class="card-title">Gerardo Femat Delgado</h5>
           <p class="card-text">
-            Soy una persona muy inteligente, me gusta mucho desafiarme en
-            matemáticas y dar asesorías a mis compañeros
+            Tengo 20 años, me gusta desafiarme en todo tipo de retos,
+            tiendo a profundizar y analizar cada detalle de mis propias creacioens.
+            Ojalá algun día salga Hlf-Life 3. Se que Valve sabe contar hasta 3.
           </p>
           <a href="//instagram.com/gefemadel?igshid=NTc4MTIwNjQ2YQ=="
             ><img src="assets/Img/instagram.png" width="10%"
@@ -133,7 +134,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Javier Guerrero Carrera</h5>
               <p class="card-text">
-                tengo 21 años, me gusta mucho tocar música de rock en mi batería y ver transmisiones en vivo. Ahorita dedico mucho tiempo a cuidar a mi abuela.
+                Tengo 21 años, me gusta mucho tocar música de rock en mi batería y ver transmisiones en vivo. Ahorita dedico mucho tiempo a cuidar a mi abuela.
               </p>
               <a href=" https://www.instagram.com/franciscomendez324/"
                 ><img src="assets/Img/instagram.png" width="10%"
