Ya quedo el formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="conocenos">Conocenos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="contactanos">Contactanos</a>
+          </li>
         </ul>
         <form class="d-flex my-1 my-lg-0 mt-lg-0" role="search">
           <input class="form-control" id="termino" type="search" placeholder="Busqueda" aria-label="Search">
