boton para ver las gráficas

--- a/src/app/components/conocenos/conocenos.component.html
+++ b/src/app/components/conocenos/conocenos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mb-4 p-3">
     <div class="card" @fade>
-      <h1>Sobre Nosotros</h1>
+      <h1 class="my-4">Sobre Nosotros</h1>
       <p>
         Somos un equipo conformado de 4 integrantes universitarios, siendo esta
         pagina un proyecto escolar de nuestra universidad. En donde trabajamos
