--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,9 @@
             <li class="nav-item">
               <button id="reservar" class="dropdown-item" routerLinkActive="active" disabled routerLink="reservaciones">Reservaciones</button>
             </li>
+            <ng-container *ngIf="usuarioAdmin">
+              <button id="graficas" class="dropdown-item" routerLink="registro" (click) = "cerrarSesion()">Graficas</button>
+            </ng-container>
             <li>
               <button id="cerrarSesion" class="dropdown-item" disabled routerLink="registro" (click) = "cerrarSesion()">Cerrar sesión</button>
             </li>
