terminada la seccion de dudas

--- a/src/app/components/dudas/dudas.component.html
+++ b/src/app/components/dudas/dudas.component.html
@@ -22,7 +22,7 @@
     <div class="card" style="width: 16.8rem;">
         <img src="https://i.pinimg.com/236x/83/07/cc/8307cc7cd977565012f2e8dc7359b734--chronic-kidney-disease-kidney-failure.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <p class="card-text"><a href="">Otros</a></p>
+          <p class="card-text"><a routerLink="/otro">Otros</a></p>
         </div>
     </div>
   </div>
